mediaqueries.css
@media screen and (max-width: 1400px) {
  #profile {
    height: 83vh;
    margin-bottom: 6rem;
  }

  .about-containers {
    flex-wrap: wrap;
  }
}

@media screen and (max-width: 1200px) {
  #desktop-nav {
    display: none;
  }
  #hamburger-nav {
    display: flex;
  }

  #experience,
  .experience-details-container {
    margin-top: 2rem;
  }

  #profile,
  .section-container {
    display: block;
  }

  .arrow {
    display: none;
  }

  section,
  .section-container {
    height: fit-content;
  }

  section {
    margin: 0 5%;
  }

  .section__pic-container {
    width: 275px;
    height: 275px;
    margin: 0 auto 2rem;
  }

  .about-containers {
    margin-top: 0;
  }
}

@media screen and (max-width: 600px) {
  #contact,
  footer {
    height: 40vh;
  }

  #profile {
    height: 83vh;
    margin-bottom: 0;
  }

  article {
    font-size: 1rem;
    text-align: center;
    color: #A6BCC7;
  }

  article .icon {
    text-align: center;
  }

  .article-container {
    align-items: center;
  }

  footer nav {
    height: fit-content;
    margin-bottom: 2rem;
  }

  .about-containers,
  .contact-info-upper-container,
  .btn-container {
    flex-wrap: wrap;
  }

  .contact-info-container {
    margin: 0;
  }

  .contact-info-container p,
  .nav-links li a {
    font-size: 1rem;
    color: #A6BCC7;
  }

  .experience-sub-title {
    font-size: 1.25rem;
    color: #A6BCC7;
  }

  .logo {
    font-size: 1.5rem;
    color: white;
  }

  .nav-links {
    flex-direction: column;
    gap: 0.5rem;
    text-align: center;
  }

  .section__pic-container {
    width: auto;
    height: 46vw;
    justify-content: center;
  }

  .section_pic-container {
    width: auto;
    height: 85vw;
    margin-bottom: 1rem;
    justify-content: center;
  }

  .section__text__p2 {
    font-size: 1.25rem;
    color: #A6BCC7;
  }

  .title {
    font-size: 2rem;
    color: white;
  }

  .text-container {
    text-align: justify;
    color: #A6BCC7;
  }

  .yt {
    width: 300px;
    height: 250px;
  }
}


@media screen and (max-width: 768px) {
  #home {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem 1rem;
    text-align: center;
  }

  .section__pic-container,
  .glow-ring {
    width: 200px;
    height: 200px;
    margin: 0 auto;
  }

  .glow-ring img {
    width: 100%;
    height: 100%;
    border-radius: 50%; /* 👈 Make it circular */
    object-fit: cover;
  }

  .section__text {
    margin-top: 1.5rem;
  }

  .title {
    font-size: 2rem;
    margin-bottom: 0.5rem;
  }

  .section__text__p2 {
    font-size: 1.2rem;

    
  }

  .glow-ring {
    box-shadow:
      0 0 6px #A6BCC7,
      0 0 12px #A6BCC7;
  }
  
}

